[package]
name = "paradoc"
version = "0.1.0"
authors = ["Brian Chen <brian.chxn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.0"
num-iter = "0.1"
regex = "1"
num-traits = "0.2"
lazy_static = "1.4.0"
