[package]
name = "paradoc"
version = "0.1.0"
authors = ["Brian Chen <brian.chxn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.0"
num-iter = "0.1"
regex = "1"
num-traits = "0.2"
lazy_static = "1.4.0"
rand = "0.7"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
# https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802 ????
wasm-opt = ["-O4", "--enable-mutable-globals"]
